Fix for bug 115698 -- crashes when sounds are playing and a window is closed. Create QuickTime movies using a permanent, singleton GWorld port, rather than using the current port, to ensure that they always have a valid port. Also fix some loop logic, and a problem where a time was not cancelled because base and derived classes erroneously duplicated some member variables. r=pinkerton, sr=beard/scc, a=scc